# libhankel

./: .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  Doxyfile  LICENSE  Makefile  README.md  README.rst  example_usage  meson.build  meson_options.txt  old_makefile.txt  pyproject.toml  requirements_dev.txt  setup.py  test_libhankel_old
.github/workflows/: docs.yml  meson.yml
c_examples/: example_ugase_broad_peak.c  example_usage_custom_form_factor.c  example_usage_g_dab.c
docs/: conf.py  examples.md  index.md  installation.md  intro.md  pageOrder.dox  usage.md
docs/html/: API_01overview_8md.html  Getting_01started_8md.html  Hankel_01transform_01methods_8md.html  The_01Hankel_01transform_8md.html  _formulas.tex  annotated.html  api__overview_8md.html  classes.html  dir_000001_000000.html  dir_000002_000001.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_d44c64559bbebec7f509842c48db8b23.html  dynsections.js  examples.html  examples_8md.html  faq.html  files.html  form__factors_8c.html  form__factors_8c__incl.map  form__factors_8c__incl.md5  form__factors_8h.html  form__factors_8h__dep__incl.map  form__factors_8h__dep__incl.md5  form__factors_8h__incl.map  form__factors_8h__incl.md5  form__factors_8h_source.html  functions.html  functions_vars.html  getting__started_8md.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  globals_vars.html  graph_legend.html  hankel__DE__quadrature_8c.html  hankel__DE__quadrature_8c__incl.map  hankel__DE__quadrature_8c__incl.md5  (+78 more)
docs/latex/: API_01overview_8md.tex  Getting_01started_8md.tex  Hankel_01transform_01methods_8md.tex  The_01Hankel_01transform_8md.tex  annotated.tex  api__overview_8md.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.tex  examples.tex  examples_8md.tex  files.tex  form__factors_8c.tex  form__factors_8c__incl.md5  form__factors_8h.tex  form__factors_8h__dep__incl.md5  form__factors_8h__incl.md5  hankel__DE__quadrature_8c.tex  hankel__DE__quadrature_8c__incl.md5  hankel__DHT_8c.tex  hankel__DHT_8c__incl.md5  hankel__FBT__Ogata_8c.tex  hankel__FBT__Ogata_8c__incl.md5  hankel__QWE_8c.tex  hankel__QWE_8c__incl.md5  hankel__transform_8c.tex  hankel__transform_8c__incl.md5  hankel__transform__methods_8md.tex  index.tex  install.tex  installation_8md.tex  intro.tex  intro_8md.tex  libhankel_8h.tex  libhankel_8h__dep__incl.md5  libhankel_8h__incl.md5  md_docs_examples.tex  md_docs_installation.tex  md_docs_intro.tex  md_docs_usage.tex  (+25 more)
docs/source/: conf.py  index.rst  intro.rst  usage.rst
docs/xml/: dir_68267d1309a1af8e8297ef4c3efbcdba.xml  dir_d44c64559bbebec7f509842c48db8b23.xml  examples_8md.xml  form__factors_8c.xml  form__factors_8h.xml  hankel__DE__quadrature_8c.xml  hankel__DHT_8c.xml  hankel__FBT__Ogata_8c.xml  hankel__QWE_8c.xml  hankel__transform_8c.xml  index.xml  index_8md.xml  indexpage.xml  installation_8md.xml  intro_8md.xml  libhankel_8h.xml  md_docs_examples.xml  md_docs_installation.xml  md_docs_intro.xml  md_docs_usage.xml  py__interface_8c.xml  structentry.xml  structform__factor__ctx.xml  structparams__struct.xml  structpy__f__ctx.xml  structstrategy__params.xml  usage_8md.xml
examples/: example_usage_python.py
examples/c/: example_usage_custom_form_factor.c  example_usage_g_dab.c
examples/python/: example_usage_broad_peak.py  example_usage_custom_form_factor.py  example_usage_g_dab.py  example_usage_spheres.py
external_libs/DE-Quadrature/: intde.c
external_libs/DE-quadrature/: LICENSE  intde.c  intde.h
external_libs/Ogata/: FBT.h  FTB.cpp
external_libs/qwe_Chave/: LICENSE  qwe_Chave.c  qwe_Chave.h
external_libs/qwe_Key/: LICENSE  qwe_Key.c  qwe_Key.h
external_libs/utils/: tanhsinh.c  tanhsinh.h
external_libs_based_work/DE-quadrature/: intde.c  intde.h
external_libs_based_work/Ogata/: FBT.h  LICENSE  citation.md
external_libs_based_work/QWE/: qwe_Chave.c  qwe_Key.c
external_libs_based_work/qwe/: qwe.h  qwe_Chave.c  qwe_Key.c  tanhsinh.c
external_libs_based_work/qwe_Chave/: qwe_Chave.c  qwe_Chave.h
external_libs_based_work/qwe_Key/: qwe_Key.c  qwe_Key.h
external_libs_based_work/utils/: LICENSE  tanhsinh.h
include/: form_factors.h  ignore.txt  interpolation.h  libhankel.h  meson.build  strateg11_const.h  strateg6_const.h  strateg9_const.h
libhankel/: __init__.py  _clib.py  _core.c  python_api.py
python/: __init__.py
python_examples/: example_usage_broad_peak.py  example_usage_custom_form_factor.py  example_usage_g_dab.py  example_usage_spheres.py
src/: form_factors.c  hankel_DE_quadrature.c  hankel_DHT.c  hankel_FBT_Ogata.c  hankel_QWE.c  hankel_de_quadrature.c  hankel_transform.c  interpolation.cpp  libhankel.c  meson.build  py_interface.c
src/LibHankel.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/intepolators/: interp_pchip.cpp
src/utils/: analytical_form_factors.c  analytical_form_factors.h  boost_bessel.cpp  boost_bessel_wrapper.h  pow_functions.h  sasfit_integrate.c  sasfit_integrate.h  sf_functions.c  sf_functions.h  strateg10_const.h  strateg11_const.h  strateg6_const.h  strateg7_const.h  strateg8_const.h  strateg9_const.h
src/wrappers/: wrapper_FBT.cpp
submodules/doxygen-awesome-css/: package.json  (+5 more)
test/: test_libhankel.c
tests/: TEMP-useful-for-later.txt  analytical_form_factors.c  meson.build  test_DHT_hankel.c  test_DHT_hankel.h  test_QWE_hankel.c  test_analytical.c  test_bessel_wrapper.c  test_common.c  test_common.h  test_form_factors.c  test_hankel_DE_Ogata.c  test_hankel_DE_Ooura.c  test_hankel_DE_Quadrature.c  test_hankel_DHT.c  test_hankel_FBT.c  test_hankel_QWE.c  test_hankel_QWE_Chave.c  test_hankel_QWE_Key.c  test_hankel_transform.c  test_integrate_ctm.c  test_libhankel.c  utils.c  utils.h
tests/data/: broadpeakHT.txt
tests/python_api_tests/: test_python_api_built_in_form_factor.py  test_python_api_custom_form_factor.py  test_python_api_error_handling.py
tests/utils/: meson.build  test_utils.c  test_utils.h
(+71 files in other folders)
