[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "LibHankel"
version = "0.1.0"
description = "Python bindings for LibHankel"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Letizia Protopapa"}]

[tool.setuptools]
packages = ["libhankel"]

[tool.setuptools.extension."libhankel"]
sources = ["libhankel/python_api.c"]
